# fontforge

./: CMakeLists.txt
Unicode/: CMakeLists.txt
contrib/cidmap/: CMakeLists.txt
contrib/fonttools/: CMakeLists.txt
fontforge/: CMakeLists.txt
fontforgeexe/: CMakeLists.txt
gdraw/: CMakeLists.txt
gutils/: CMakeLists.txt
